--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -7,13 +7,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary:hsl(146.45, 39.24%, 53.53%);
+  --ifm-color-primary-dark: hsl(146.45, 39.24%, 48%);
+  --ifm-color-primary-darker:hsl(146.45, 39.24%, 43%);
+  --ifm-color-primary-darkest: hsl(146.45, 39.24%, 35%);
+  --ifm-color-primary-light:hsl(146.45, 39.24%, 58%);
+  --ifm-color-primary-lighter: hsl(146.45, 39.24%, 63%);
+  --ifm-color-primary-lightest: hsl(146.45, 39.24%, 68%);
   --ifm-code-font-size: 95%;
 }
 
@@ -22,4 +22,8 @@
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
+}
+
+.button.button--secondary.button--outline:not(.button--active):not(:hover) {
+  color: var(--ifm-font-color-base-alternative);
 }
